--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "node-rest-client": "0.8.6",
     "lodash": "2.4.1",
     "moment": "2.6.0",
-    "rally": "~0.1.3"
+    "rally": "~0.1.3",
+    "log4js": "~0.6.14"
   }
 }
